Updated dwitter template to show code

--- a/templates/dwitter.html
+++ b/templates/dwitter.html
@@ -7,9 +7,13 @@
             <main>
                 <section style="margin: 0 auto; max-width: 600px">
                     <canvas style="width: 100%" id="c" width="1920" height="1080"></canvas>
-                    <div syle='white-space: pre-wrap;'>
+                    <code>function u(t) {</code>
+                    <br/>
+                    <textarea style="width: 100%" rows="5">
                         {{dwitter_code}}
-                    </div>
+                    </textarea>
+                    <br/>
+                    <code>}</code>
                 </section>
             </main>
             <script>
