--- a/src/app.module.css
+++ b/src/app.module.css
@@ -1,4 +1,5 @@
-.demo_content {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+.demo_container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
