--- a/src/components/DemoItem/DemoItem.module.css
+++ b/src/components/DemoItem/DemoItem.module.css
@@ -11,10 +11,12 @@
     margin: 10px 0;
     font-size: 1.2rem;
     font-weight: bold;
+    text-transform: capitalize;
 }
 
 p {
     margin: 5px 0;
+    word-break: break-all;
 }
 
 .tag_container {
@@ -36,7 +38,12 @@ p {
     margin-left: 0;
 }
 
+.media_container {
+    height: clamp(260px, 20vw, 480px);
+}
+
 video, img {
     object-fit: cover;
     height: clamp(260px, 20vw, 480px);
+    width: 100%;
 }
